gcc/testsuite/rust/rustc/ui/query-system/no-query-in-printing-during-query-descr.rs
fn a() -> _ {
// { dg-error ".E0121." "" { target *-*-* } .-1 }
    &a
}

fn main() {}

